# MRIAnalyzer

./: .gitignore  AnimationSaveDialog.cpp  AnimationSaveDialog.h  AnimationSaveDialog.ui  AnimationWidget.cpp  AnimationWidget.h  AnimationWidget.ui  CMakeLists.txt  ComboBoxDelegate.cpp  ComboBoxDelegate.h  FileExplorer.cpp  FileExplorer.h  ImageViewer.cpp  ImportDialog.cpp  ImportDialog.h  ImportDialog.ui  MRIAnalyzer.pro  MRIMainWindow.cpp  MRIMainWindow.h  MRIMainWindow.ui  ParticleMapper.cpp  RendererData.cpp  RendererTabWidget.cpp  RendererTabWidget.h  SliceInteratorStyle.h  SliceView.cpp  SliceView.h  SliceView.ui  TreeItem.h  VTKRenderer.cpp  VTKRenderer.h  main.cpp
src/: AnimationSaveDialog.cpp  AnimationWidget.cpp  AnimationWidget.h  AnimationWidget.ui  AppManager.cpp  AppManager.h  ColorDialog.cpp  ColorDialog.h  ColorDialog.ui  ImageViewer.cpp  ImageViewer.h  ImageViewer.ui  ImportDialog.cpp  ImportDialog.h  ImportDialog.ui  MRIAnalyzer.pro  MRIMainWindow.cpp  MRIMainWindow.h  MRIMainWindow.ui  ParticleMapper.h  ProjectTreeModel.cpp  ProjectTreeModel.h  RendererData.cpp  RendererData.h  RendererTabWidget.cpp  RendererTabWidget.h  SliceInteratorStyle.h  SliceView.cpp  SliceView.h  SliceView.ui  TreeItem.cpp  TreeItem.h  VTKRenderer.cpp  VTKRenderer.h  VTKRenderer.ui  images.qrc  main.cpp
